[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/event_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/level_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://medias/gfx/static/square.png" type="Texture" id=4]
[ext_resource path="res://scenes/background2.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource/name = "hide_menu"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 640, -360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 0.6, 0.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 640, -360 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ 0.0, 0.6 ]
}

[node name="Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="event_zone" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 0, 640 )

[node name="event_zone1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 0, -128 )

[node name="level_menu" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 0, -1 )

[node name="show_menu" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide_menu = SubResource( 1 )
anims/show_menu = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]

visibility/opacity = 0.0
transform/scale = Vector2( 1280, 720 )
texture = ExtResource( 4 )
centered = false
modulate = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = -360.0
margin/right = 680.0
margin/bottom = -320.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 180.0
margin/top = 50.0
margin/right = 20.0
margin/bottom = 20.0
text = "Future Main Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = 20.0
margin/right = -60.0
margin/bottom = 60.0
alignment = 0

[node name="music" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 111.0
margin/bottom = 23.0
disabled = true
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Enable music"
flat = false
align = 0

[node name="sound" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 27.0
margin/right = 111.0
margin/bottom = 50.0
disabled = true
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Enable sound"
flat = false
align = 0

[node name="Background" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Timer" to="." method="init"]

[connection signal="body_enter" from="event_zone1" to="." method="before_start"]

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/music" to="." method="set_music"]

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/sound" to="." method="set_sound"]


